--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chrome-lens-ocr",
-  "version": "3.0.0",
+  "name": "image-to-text-google-lens",
+  "version": "1.0.0",
   "description": "Package to use Google Lens OCR for free, via API used in Chrome.",
   "main": "src/index.js",
   "scripts": {
